# meadow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run-precommit
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: demo.py  demo_user_feedback.py
examples/data/: custom_text2sql_benchmark.json  custom_text2sql_benchmark_v2.json  sales.sql  sales_ambiguous_joins.sql  sales_example_schema.json  sales_predictive.sql
examples/notebooks/: new_agent.ipynb
experiments/text2sql/: agent_factory.py  eval_user.py  evaluate.py  predict.py  utils.py
meadow/: __init__.py
meadow/agent/: __init__.py  agent.py  controller.py  executor.py  planner.py  schema.py  user.py  utils.py
meadow/agent/data_agents/: attribute_detector.py  basic.py  column_generation.py  planner_constraints.py  schema_renamer.py  sql_decomposer.py  sql_planner.py  table_selector.py  text2sql.py  text2sql_utils.py
meadow/agent/exectors/: empty_result.py  reask.py
meadow/agent/executor/: batch_llm.py  debugger.py  reask.py  user_feedback.py
meadow/agent/executor/contrib/: empty_result_debugger.py  sql_validate_reask.py
meadow/agent/executor/data_executors/: empty_result_debugger.py  sql_validate_reask.py
meadow/cache/: __init__.py  cache.py  duckdb.py  sqllite.py
meadow/client/: __init__.py  client.py  schema.py
meadow/client/api/: anthropic.py  api_client.py  groq.py  openai.py  samba.py  together.py
meadow/database/: database.py  serializer.py
meadow/database/connector/: connector.py  duckdb.py  sqlite.py
meadow/history/: message_history.py
tests/: __init__.py  conftest.py
tests/cache/: test_cache.py  test_cache_implementations.py
tests/client/: test_anthropic.py  test_client.py  test_openai.py  test_schema.py
tests/database/: test_database.py  test_serializer.py
tests/database/connector/: test_connector.py  test_duckdb.py  test_sqlite.py
tests/history/: test_message_history.py
