[tool.poetry]
name = "meadow"
homepage = "https://github.com/NumbersStationAI/meadow"
version = "0.1.0"
description = "Agents to automate away BI"
authors = ["Laurel Orr <laurel.orr@numbersstation.ai>"]
repository = "https://github.com/NumbersStationAI/meadow"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.2"
nest-asyncio = "^1.6.0"
duckdb = "^0.10.2"
anthropic = "^0.25.6"
colorama = "^0.4.6"
sqlglot = "^23.12.1"
termcolor = "^2.4.0"
textdistance = "^4.6.2"
pandas = "^2.2.2"
ipdb = "^0.13.13"
click = "^8.1.7"
rich = "^13.7.1"
beautifulsoup4 = "^4.12.3"
textblob = "^0.18.0.post0"
together = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
types-colorama = "^0.4.15.20240311"
pandas-stubs = "^2.2.1.240316"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["experiments"]
local_partial_types = true
strict_optional = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "jinja2.*",
  "attr.*",
  "together.*",
]

[tool.ruff]
exclude = ["experiments"]

[tool.ruff.lint]
select = [
  # flake8-logging
  "G",
  # isort
  "I",
  # autoflake
  "F",
  # flake8
  "E",
  "W",
  "N",
]
ignore = [
  # E203: whitespace before ':'
  "E203",
  # E501: allow long lines, enforce line length with ruff
  "E501",
  # E731: do not assign a lambda expression, use a def
  "E731",
  # N812: lowercase imported as non-lowercase
  "N812",
  # G004: f strings in logging statements
  "G004",
  # G003: + strings in logging statements
  "G003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["meadow", "tests"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["declared_attr"]

[tool.pytest.ini_options]
addopts = "-vv -rsXx"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "[%(levelname)s] %(message)s"
# The following options are useful for local debugging
# addopts = "-v -rsXx -s -x --pdb"
# log_cli_level = "DEBUG"
# log_cli = true